# Kung-Fu-Chess

./: .gitignore  CLAUDE.md  Makefile  main.cpp
docs/: ARCHITECTURE_DECISIONS.md
docs/tasks/: config-driven-rest-durations.md  full-graphics-buildout-plan.md  player-names-score-moves-log.md  server-phase-plan.md
include/: Board.h  Board.hpp  BoardParser.hpp  Controller.hpp  Game.h  Game.hpp  GameEngine.hpp  MovementRules.hpp  Piece.h  Piece.hpp  PieceFactory.h  Pieces.h  Pieces.hpp  Position.hpp  Renderer.hpp  TextTestRunner.hpp
include/audio/: SoundManager.hpp
include/controller/: Controller.hpp
include/event_bus/: EventBus.hpp  Events.hpp
include/game_engine/: GameEngine.hpp
include/model/: Board.hpp  Piece.hpp  PieceFactory.hpp  PieceKind.hpp  Pieces.hpp
include/movement_rules/: BishopMovement.hpp  IMovementStrategy.hpp  KingMovement.hpp  KnightMovement.hpp  MovementRules.hpp  MovementStrategyFactory.hpp  PawnMovement.hpp  QueenMovement.hpp  RookMovement.hpp
include/real_time_arbiter/: RealTimeArbiter.hpp
include/renderer/: Board_view.hpp  Hud_view.hpp  Piece_animator.hpp  Renderer.hpp  RestDurationLoader.hpp  Sprite_animation.hpp
include/rule_engine/: RuleEngine.hpp
include/server/: GameCommandParser.hpp  GameSession.hpp  GameStateSerializer.hpp
include/text_io/: BoardParser.hpp  BoardPrinter.hpp
include/text_test_runner/: TextTestRunner.hpp
kungfu-graphics/cpp/: CMakeLists.txt  README.md
kungfu-graphics/cpp/src/: img.cpp  img.hpp  main.cpp
kungfu-graphics/pieces1/: board.csv
kungfu-graphics/pieces1/BW/states/jump/: config.json
kungfu-graphics/pieces1/KW/states/jump/: config.json
kungfu-graphics/pieces1/KW/states/short_rest/: config.json
kungfu-graphics/pieces1/RW/states/long_rest/: config.json
kungfu-graphics/pieces2/BB/states/idle/: config.json
kungfu-graphics/pieces2/PB/states/short_rest/: config.json
kungfu-graphics/pieces2/QW/states/long_rest/: config.json
kungfu-graphics/pieces2/QW/states/move/: config.json
kungfu-graphics/pieces3/BN/states/long_rest/: config.json
kungfu-graphics/pieces3/BN/states/move/: config.json
kungfu-graphics/pieces3/BQ/states/idle/: config.json
kungfu-graphics/pieces3/BR/states/jump/: config.json
kungfu-graphics/pieces3/WQ/states/short_rest/: config.json
scripts/: build_vpl_submission.sh  ws_test_client.py
server/: CMakeLists.txt  main.cpp
src/: Board.cpp  BoardParser.cpp  Game.cpp  GameEngine.cpp  MovementRules.cpp  PieceFactory.cpp  RealTimeArbiter.cpp  RuleEngine.cpp  main.cpp
src/audio/: SoundManager.cpp
src/controller/: Controller.cpp
src/game_engine/: GameEngine.cpp
src/model/: Board.cpp  PieceFactory.cpp
src/movement_rules/: BishopMovement.cpp  KingMovement.cpp  KnightMovement.cpp  MovementRules.cpp  MovementStrategyFactory.cpp  PawnMovement.cpp  QueenMovement.cpp  RookMovement.cpp
src/real_time_arbiter/: RealTimeArbiter.cpp
src/renderer/: Board_view.cpp  Hud_view.cpp  Piece_animator.cpp  Renderer.cpp  RestDurationLoader.cpp  Sprite_animation.cpp
src/rule_engine/: RuleEngine.cpp
src/server/: GameCommandParser.cpp  GameSession.cpp  GameStateSerializer.cpp
src/text_io/: BoardParser.cpp  BoardPrinter.cpp
src/text_test_runner/: TextTestRunner.cpp
tests/: test_board.cpp  test_controller.cpp  test_event_bus.cpp  test_game.cpp  test_game_command_parser.cpp  test_game_engine.cpp  test_game_session.cpp  test_game_state_serializer.cpp  test_movement_rules.cpp  test_movement_strategies.cpp  test_pieces.cpp  test_real_time_arbiter.cpp  test_renderer.cpp  test_rule_engine.cpp  test_text_io.cpp  test_text_test_runner.cpp
